Add more Javadocs, improve instructions when native access is misisng; also add "enable-native" access parameter to JVM test options