@@ -48,6 +48,13 @@ import org.apache.lucene.util.Constants;
  * of box with some compilation tricks. For more information about the foreign memory API read
  * documentation of the {@link java.lang.foreign} package.
  *
+ * <p>On some platforms like Linux and MacOS X, this calls will invoke the syscall {@code madvise()}
+ * to advise how OS kernel should handle paging after opening a file. For this to work, Java code
+ * must be able to call native code. If this is not allowed, a warning is logged. To enable native
+ * access for Lucene in a modularized application, pass {@code
+ * --enable-native-access=org.apache.lucene.core} to the Java command line. If Lucene is running in
+ * a classpath-based application, use {@code --enable-native-access=ALL-UNNAMED}.
+ *
  * <p><b>NOTE:</b> Accessing this class either directly or indirectly from a thread while it's
  * interrupted can close the underlying channel immediately if at the same time the thread is
  * blocked on IO. The channel will remain closed and subsequent access to {@link MMapDirectory} will
@@ -273,7 +280,7 @@ public class MMapDirectory extends FSDirectory {
 
   /**
    * Returns true, if MMapDirectory uses the platform's {@code madvise()} syscall to advise how OS
-   * kernel should page results after opening a file.
+   * kernel should handle paging after opening a file.
    */
   public static boolean supportsMadvise() {
     return PROVIDER.supportsMadvise();
